--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </li>
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg"  width="64" height="64">
+                <svg class="sectwo-svg" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -407,6 +407,88 @@
               </a>
             </li>
           </ul>
+        </div>
+      </div>
+
+      <div class="modal">
+        <div class="overlay">
+          <form class="modal-form" action="">
+            <div class="close">
+              <span>x</span>
+            </div>
+            <h3 class="modal-title">
+              Leave your contacts and we will call you back
+            </h3>
+            <div class="input-group">
+              <label for="username"></label>
+              <div class="input-container">
+                <svg
+                  href="./images/icons.svg#icon-user"
+                  class="input-icon"
+                  width="16"
+                  height="16"
+                >
+                  <use></use>
+                </svg>
+                <input
+                  type="text"
+                  name="username"
+                  class="username"
+                  id="username"
+                />
+              </div>
+            </div>
+            <div class="input-group">
+              <label for="phone">Phone</label>
+              <div class="input-container">
+                <svg
+                  href="./images/icons.svg#icon-user"
+                  class="input-icon"
+                  width="16"
+                  height="16"
+                >
+                  <use></use>
+                </svg>
+                <input type="text" name="phone" class="phone" id="phone" />
+              </div>
+            </div>
+            <div class="input-group">
+              <label for="email">Email</label>
+              <div class="input-container">
+                <svg
+                  href="./images/icons.svg#icon-user"
+                  class="input-icon"
+                  width="16"
+                  height="16"
+                >
+                  <use></use>
+                </svg>
+                <input type="text" name="email" class="email" id="email" />
+              </div>
+            </div>
+            <div class="input-group">
+              <label for="comment"></label>
+              <div class="input-container">
+                <textarea
+                  name="comment"
+                  id="comment"
+                  class="comment"
+                  placeholder="text-input"
+                ></textarea>
+              </div>
+            </div>
+            <div class="input-group">
+              <label for="checkbox"></label>
+              <div class="input-container">
+                <textarea
+                  name="comment"
+                  id="comment"
+                  class="comment"
+                  placeholder="text-input"
+                ></textarea>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
