--- a/index.html
+++ b/index.html
@@ -408,83 +408,17 @@
             </li>
           </ul>
         </div>
-        <div class="modal overlay">
+        <div class="modal">
+          <p class="modal-text">Subscribe</p>
           <form class="modal-form" action="">
-            <div class="close">
-              <span>x</span>
-            </div>
-            <h3 class="modal-title">
-              Leave your contacts and we will call you back
-            </h3>
-            <div class="input-group">
-              <label for="username"></label>
-              <div class="input-container">
-                <svg
-                  href="./images/icons.svg#icon-user"
-                  class="input-icon"
-                  width="16"
-                  height="16"
-                >
-                  <use></use>
-                </svg>
-                <input
-                  type="text"
-                  name="username"
-                  class="username"
-                  id="username"
-                />
-              </div>
-            </div>
-            <div class="input-group">
-              <label for="phone">Phone</label>
-              <div class="input-container">
-                <svg
-                  href="./images/icons.svg#icon-user"
-                  class="input-icon"
-                  width="16"
-                  height="16"
-                >
-                  <use></use>
-                </svg>
-                <input type="text" name="phone" class="phone" id="phone" />
-              </div>
-            </div>
-            <div class="input-group">
-              <label for="email">Email</label>
-              <div class="input-container">
-                <svg
-                  href="./images/icons.svg#icon-user"
-                  class="input-icon"
-                  width="16"
-                  height="16"
-                >
-                  <use></use>
-                </svg>
-                <input type="text" name="email" class="email" id="email" />
-              </div>
-            </div>
-            <div class="input-group">
-              <label for="comment"></label>
-              <div class="input-container">
-                <textarea
-                  name="comment"
-                  id="comment"
-                  class="comment"
-                  placeholder="text-input"
-                ></textarea>
-              </div>
-            </div>
-            <div class="input-group">
-              <label for="checkbox"></label>
-              <div class="input-container">
-                <textarea
-                  name="comment"
-                  id="comment"
-                  class="comment"
-                  placeholder="text-input"
-                ></textarea>
-              </div>
-            </div>
+            <label class="modal-label" for="">
+              <input class="modal-email" name="email" type="email" placeholder="E-posta" />
+            </label>
+            <button class="modal-button" type="submit" >Subscribe
+              <svg class="modal-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
