--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
           <p class="modal-text">Subscribe</p>
           <form class="modal-form" action="">
             <label class="modal-label" for="">
-              <input class="modal-email" name="email" type="email" placeholder="E-posta" />
+              <input class="modal-email" name="email" type="email" placeholder="E-mail" />
             </label>
             <button class="modal-button" type="submit" >Subscribe
               <svg class="modal-svg" width="24" height="24">
