--- a/index.html
+++ b/index.html
@@ -423,5 +423,10 @@
         </div>
       </div>
     </footer>
+    <main>
+      <div class="modal-window">
+
+      </div>
+    </main>
   </body>
 </html>
