--- a/index.html
+++ b/index.html
@@ -425,6 +425,14 @@
     </footer>
     >
       <div class="modal-window">
+        <div class="modal-container">
+          <button type="button" class="win-button">
+            <svg class="win-svg" width="8" height="8">
+              <use href="./images/icons.svg#icon-username"></use>
+            </svg>
+          </button>
+          <p class="name-parag"></p>
+        </div>
 
       </div>
     
