--- a/index.html
+++ b/index.html
@@ -412,9 +412,15 @@
           <p class="modal-text">Subscribe</p>
           <form class="modal-form" action="">
             <label class="modal-label" for="">
-              <input class="modal-email" name="email" type="email" placeholder="E-mail" />
+              <input
+                class="modal-email"
+                name="email"
+                type="email"
+                placeholder="E-mail"
+              />
             </label>
-            <button class="modal-button" type="submit" >Subscribe
+            <button class="modal-button" type="submit">
+              Subscribe
               <svg class="modal-svg" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
@@ -423,18 +429,72 @@
         </div>
       </div>
     </footer>
-    >
-      <div class="modal-window">
-        <div class="modal-container">
-          <button type="button" class="win-button">
-            <svg class="win-svg" width="8" height="8">
-              <use href="./images/icons.svg#icon-username"></use>
-            </svg>
-          </button>
-          <p class="name-parag"></p>
-        </div>
 
+    <div class="modal-window">
+      <div class="modal-container">
+        <button type="button" class="close-win">
+          <svg class="close-svg" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="title-win"></p>
+        <form action="">
+          <div class="user-div">
+            <label class="user-label" name="username" for="user-name"></label>
+            <div class="user-wrap">
+              <input
+                class="user-input"
+                name="user-name"
+                id="user-name"
+                type="text"
+                placeholder="Name"
+              />
+              <svg class="user-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-username"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="user-div">
+            <label class="user-label" name="phone" for="phone"></label>
+            <div class="user-wrap">
+              <input
+                class="user-input"
+                name="phone"
+                id="phone"
+                type="text"
+                placeholder="Name"
+              />
+              <svg class="user-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="user-div">
+            <label class="user-label" name="email" for="email"></label>
+            <div class="user-wrap">
+              <input
+                class="user-input"
+                name="phone"
+                id="phone"
+                type="text"
+                placeholder="Name"
+              />
+              <svg class="user-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="user-div a">
+            <label class="user-label" name="comment" for="user-comment"></label>
+            <textarea
+              class="comment-text"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+        </form>
       </div>
-    
+    </div>
   </body>
 </html>
