--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <p class="title-win"></p>
         <form action="">
           <div class="user-div">
-            <label class="user-label" name="username" for="user-name"></label>
+            <label class="user-label" name="username" for="user-name">Name</label>
             <div class="user-wrap">
               <input
                 class="user-input"
@@ -455,7 +455,7 @@
             </div>
           </div>
           <div class="user-div">
-            <label class="user-label" name="phone" for="phone"></label>
+            <label class="user-label" name="phone" for="phone">Phone</label>
             <div class="user-wrap">
               <input
                 class="user-input"
@@ -470,7 +470,7 @@
             </div>
           </div>
           <div class="user-div">
-            <label class="user-label" name="email" for="email"></label>
+            <label class="user-label" name="email" for="email">Email</label>
             <div class="user-wrap">
               <input
                 class="user-input"
@@ -484,8 +484,8 @@
               </svg>
             </div>
           </div>
-          <div class="user-div a">
-            <label class="user-label" name="comment" for="user-comment"></label>
+          <div class="user-div">
+            <label class="user-label" name="comment" for="user-comment">Comment</label>
             <textarea
               class="comment-text"
               name="user-comment"
