--- a/index.html
+++ b/index.html
@@ -440,7 +440,9 @@
         <p class="title-win"></p>
         <form action="">
           <div class="user-div">
-            <label class="user-label" name="username" for="user-name">Name</label>
+            <label class="user-label" name="username" for="user-name"
+              >Name</label
+            >
             <div class="user-wrap">
               <input
                 class="user-input"
@@ -485,13 +487,32 @@
             </div>
           </div>
           <div class="user-div">
-            <label class="user-label" name="comment" for="user-comment">Comment</label>
+            <label class="user-label" name="comment" for="user-comment"
+              >Comment</label
+            >
             <textarea
               class="comment-text"
               name="user-comment"
               id="user-comment"
               placeholder="Text input"
             ></textarea>
+          </div>
+          <div class="win-checkbox">
+            <input
+              class="privacy-input visually-hidden"
+              name="user-privacy"
+              id="user-privacy"
+              type="checkbox"
+              value="true"
+            />
+            <label class="privacy-label" for="user-privacy"
+              >I accept the terms and conditions of the
+              <span class="privacy-span">
+                <svg class="privacy-svg" width="10" height="8">
+                  <use href="./images/icons.svg#icon-privacy"></use>
+                </svg>
+              </span>
+            </label>
           </div>
         </form>
       </div>
