--- a/index.html
+++ b/index.html
@@ -511,11 +511,11 @@
                 <svg class="privacy-svg" width="10" height="8">
                   <use href="./images/icons.svg#icon-privacy"></use>
                 </svg>
-                <a class="privacy-link" href="#">Privacy Policy</a>
+                <a class="privacy-link" href="#"  >Privacy Policy</a>
               </span>
             </label>
           </div>
-          <button class="win-send"></button>
+          <button class="win-send">Send</button>
         </form>
       </div>
     </div>
