--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </section>
       <section class="section-two">
         <div class="container">
-          <h2 class="visually-hidden"></h2>
+          <h2 class="visually-hidden"> </h2>
           <ul class="sectwo-ul">
             <li class="sectwo-li">
               <div class="sectwo-container">
@@ -410,11 +410,11 @@
         </div>
         <div class="modal">
           <p class="modal-text">Subscribe</p>
-          <form class="modal-form" action="">
-            <label class="modal-label" for="">
+          <form class="modal-form" action="#">
+            <label class="modal-label" for="e-mail">
               <input
                 class="modal-email"
-                name="email"
+                name="e-mail"
                 type="email"
                 placeholder="E-mail"
               />
@@ -438,10 +438,10 @@
           </svg>
         </button>
         <p class="title-win"></p>
-        <form action="">
+        <form action="#">
           <div class="user-div">
             <label class="user-label" name="username" for="user-name"
-              >Name</label
+              > Name </label
             >
             <div class="user-wrap">
               <input
@@ -457,7 +457,7 @@
             </div>
           </div>
           <div class="user-div">
-            <label class="user-label" name="phone" for="phone">Phone</label>
+            <label class="user-label" name="phone" for="phone"> Phone </label>
             <div class="user-wrap">
               <input
                 class="user-input"
@@ -488,7 +488,7 @@
           </div>
           <div class="user-div">
             <label class="user-label" name="comment" for="user-comment"
-              >Comment</label
+              > Comment </label
             >
             <textarea
               class="comment-text"
@@ -506,7 +506,7 @@
               value="true"
             />
             <label class="privacy-label" for="user-privacy"
-              >I accept the terms and conditions of the
+              > I accept the terms and conditions of the
               <span class="privacy-span">
                 <svg class="privacy-svg" width="10" height="8">
                   <use href="./images/icons.svg#icon-privacy"></use>
