--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         <p class="title-win"></p>
         <form action="#">
           <div class="user-div">
-            <label class="user-label" name="username" for="user-name"
+            <label class="user-label" for="user-name"
               > Name </label
             >
             <div class="user-wrap">
@@ -456,7 +456,7 @@
             </div>
           </div>
           <div class="user-div">
-            <label class="user-label" name="phone" for="phone"> Phone </label>
+            <label class="user-label" for="phone"> Phone </label>
             <div class="user-wrap">
               <input
                 class="user-input"
@@ -471,7 +471,7 @@
             </div>
           </div>
           <div class="user-div">
-            <label class="user-label" name="email" for="email">Email</label>
+            <label class="user-label" for="email"> Email</label>
             <div class="user-wrap">
               <input
                 class="user-input"
@@ -486,7 +486,7 @@
             </div>
           </div>
           <div class="user-div">
-            <label class="user-label" name="comment" for="user-comment"
+            <label class="user-label" for="user-comment"
               > Comment </label
             >
             
