--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
               <input
                 class="modal-email"
                 name="e-mail"
+                id="modal-email"
                 type="email"
                 placeholder="E-mail"
               />
@@ -475,8 +476,8 @@
             <div class="user-wrap">
               <input
                 class="user-input"
-                name="phone"
-                id="phone"
+                name="email"
+                id="user-email"
                 type="text"
                 placeholder="Name"
               />
