--- a/index.html
+++ b/index.html
@@ -411,15 +411,16 @@
         <div class="modal">
           <p class="modal-text">Subscribe</p>
           <form class="modal-form" action="#">
-            <label class="modal-label" for="e-mail">
+            <label class="modal-label" for="e-mail"></label>
               <input
+              
                 class="modal-email"
                 name="e-mail"
                 id="modal-email"
                 type="email"
                 placeholder="E-mail"
               />
-            </label>
+            
             <button class="modal-button" type="submit">
               Subscribe
               <svg class="modal-svg" width="24" height="24">
