--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <div class="modal">
           <p class="modal-text">Subscribe</p>
           <form class="modal-form" action="#">
-            <label class="modal-label" for="e-mail"></label>
+            <label class="modal-label" for="e-mail">
               <input
               
                 class="modal-email"
@@ -420,7 +420,7 @@
                 type="email"
                 placeholder="E-mail"
               />
-            
+            </label>
             <button class="modal-button" type="submit">
               Subscribe
               <svg class="modal-svg" width="24" height="24">
