--- a/index.html
+++ b/index.html
@@ -411,11 +411,11 @@
         <div class="modal">
           <p class="modal-text">Subscribe</p>
           <form class="modal-form" action="#">
-            <label class="modal-label" for="e-mail">
+            <label class="modal-label" for="modal-email">
               <input
               
                 class="modal-email"
-                name="e-mail"
+                name="modal-email"
                 id="modal-email"
                 type="email"
                 placeholder="E-mail"
@@ -473,11 +473,11 @@
             </div>
           </div>
           <div class="user-div">
-            <label class="user-label" for="email"> Email</label>
+            <label class="user-label" for="user-email"> Email</label>
             <div class="user-wrap">
               <input
                 class="user-input"
-                name="email"
+                name="user-email"
                 id="user-email"
                 type="text"
                 placeholder="Name"
