--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </section>
       <section class="section-two">
         <div class="container">
-          <h2 class="visually-hidden"> </h2>
+          <h2 class="visually-hidden"></h2>
           <ul class="sectwo-ul">
             <li class="sectwo-li">
               <div class="sectwo-container">
@@ -413,7 +413,6 @@
           <form class="modal-form" action="#">
             <label class="modal-label" for="modal-email">
               <input
-              
                 class="modal-email"
                 name="modal-email"
                 id="modal-email"
@@ -441,9 +440,7 @@
         <p class="title-win"></p>
         <form action="#">
           <div class="user-div">
-            <label class="user-label" for="user-name"
-              > Name </label
-            >
+            <label class="user-label" for="user-name"> Name </label>
             <div class="user-wrap">
               <input
                 class="user-input"
@@ -488,10 +485,8 @@
             </div>
           </div>
           <div class="user-div">
-            <label class="user-label" for="user-comment"
-              > Comment </label
-            >
-            
+            <label class="user-label" for="user-comment"> Comment </label>
+
             <textarea
               class="comment-text"
               name="user-comment"
@@ -507,8 +502,8 @@
               type="checkbox"
               value="true"
             />
-            <label class="privacy-label" for="user-privacy"
-              > I accept the terms and conditions of the
+            <label class="privacy-label" for="user-privacy">
+              I accept the terms and conditions of the
               <span class="privacy-span">
                 <svg class="privacy-svg" width="10" height="8">
                   <use href="./images/icons.svg#icon-privacy"></use>
